꾸민거 커밋

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 style="color: red; background-color: aqua;">나의 첫 페이지</h1>
+    <p>오늘은 나의 첫번째 웹페이지를 만듬</p>
 </body>
 </html>
