--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="kor">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
+    <script defer src="./js/main.js"></script>
 </head>
+
 <body>
-    <h1 style="color: red; background-color: aqua;">나의 첫 페이지</h1>
+    <h1>나의 첫 페이지</h1>
+    <h2>제목 태그</h2>
     <p>오늘은 나의 첫번째 웹페이지를 만듬</p>
+    <h4>여기는 글 마지막 위치 </h4>
+    <h2>About</h2>
+    <a href="about.html">about 페이지로 이동</a>
 </body>
+
 </html>
