--- a/profile/profile.html
+++ b/profile/profile.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/profile.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <img src="./img/profile_img.JPG" 
+    class="profileImg" alt="프로필 이미지">
+    <h3 class="title">zzzz</h3>
+    <h4 class="title">프런트엔드 개발자</h4>
+    <div class="box">
+
+        <p>ㅎㅇ
+            ㅎㅇㅎㅇㅎㅇㅎㅇㅎㅇㅎㅇㅎ
+            ㅎㅇㅎㅇㅎㅇㅎㅇㅎㅇㅎㅇㅎ
+            ㅎㅇㅎㅇㅎㅇㅎㅇㅎㅇㅎㅇㅎ
+            ㅎㅇㅎㅇㅎㅇㅎㅇㅎㅇㅎㅇㅎ
+            ㅎㅇㅎㅇㅎㅇㅎㅇㅎㅇㅎㅇㅎ
+        </p>
+    </div>
 </body>
 </html>
