--- a/site/html/site.html
+++ b/site/html/site.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="main">
-        
+        <div class="img"></div>
+        <div class="desc">
+            <p class="title">캐논 DSLR 팜ㅋ</p>
+            <p class="loc">성동구 행당동 10분전</p>
+            <p class="price">210,000원</p>
+            <p class="like">♡ 4</p>
+        </div>
     </div>    
 </body>
 </html>
