--- a/shoes/shoes.html
+++ b/shoes/shoes.html
@@ -22,5 +22,42 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus illum asperiores obcaecati sunt blanditiis rem illo labore autem vitae. Molestias, eos. Officia, aliquid vel? Nesciunt quos laborum temporibus ratione debitis.
         </p>
     </div>
+    <!-- 폼 작업 form action get이나 post 씀-->
+     <!-- action : 전송할 주소 -->
+     <!-- method : 전송 방법 : get,post -->
+      
+    <div class="from-background">
+        <div class="form-white">
+            <form action="">
+                <div class="w-100">
+                    <h3>Contact Us</h3>
+                    <p>Your Email</p>
+                    <input type="email" class="form-input"
+                    placeholder="Enter your email">
+                </div>
+                <div class="w-50">
+                    <p>First Name</p>
+                    <input type="text" class="form-input">
+                </div>
+                <div class="w-50">
+                    <p>Last Name</p>
+                    <input type="text" class="form-input">
+                </div>
+                <div style="clear: both;"></div>
+                <div class="w-100">
+                    <p>Message</p>
+                    <textarea name="" id=""
+                    class="form-input"></textarea>
+                </div>
+                <div class="w-100">
+                    <input type="checkbox" name="" id="sub">
+                    <label for="">Subscribe</label>
+                    <!-- <button class="btn yellow-button">SEND</button> -->
+                     <input type="submit">
+                </div>
+            
+            </form>
+        </div>
+    </div>
 </body>
 </html>
