--- a/shoes/shoes.html
+++ b/shoes/shoes.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="nav-container">
+        <div class="nav-item">ShoesShop</div>
+            <div class="nav-item">Product</div>
+            <div style="flex-grow: 1;"></div>
+            <div class="nav-item">Service</div>
+    </div>
     <div class="main-background">
         <h4 class="main-title">Buy Our Shoes!</h4>
         <p class="main-content">
