media query clear

--- a/shoes/shoes.html
+++ b/shoes/shoes.html
@@ -32,6 +32,26 @@
      <!-- action : 전송할 주소 -->
      <!-- method : 전송 방법 : get,post -->
       
+     <!-- 미디어 쿼리를 활용한 가로정렬 연습 -->
+      <div class="product-container">
+        <div>
+            <h4>Fast Shopping</h4>
+            <p>lorem ipsum</p>
+        </div>
+        <div>
+            <h4>Fast Shopping</h4>
+            <p>lorem ipsum</p>
+        </div>
+        <div>
+            <h4>Fast Shopping</h4>
+            <p>lorem ipsum</p>
+        </div>
+        <div>
+            <h4>Fast Shopping</h4>
+            <p>lorem ipsum</p>
+        </div>
+        <div style="float: none; clear: both;"></div>
+      </div>
     <div class="from-background">
         <div class="form-white">
             <form action="">
