--- a/shoes/shoes.html
+++ b/shoes/shoes.html
@@ -1,89 +1,125 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/shoes/css/shoes.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./css/shoes.css">
+  <title>Document</title>
 </head>
 <body>
-    <div class="nav-container">
-        <div class="nav-item">ShoesShop</div>
-            <div class="nav-item">Product</div>
-            <div style="flex-grow: 1;"></div>
-            <div class="nav-item">Service</div>
+  <div class="nav-container">
+    <div class="nav-item">ShoesShop</div>
+    <div class="nav-item">Products</div>
+    <div style="flex-grow: 1;"></div>
+    <div class="nav-item">Services</div>
+  </div>
+  <div class="main-background">
+    <h4 class="main-title">Buy Out Shoes!</h4>
+    <p class="main-content">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+      Quos, explicabo dolores iure consequuntur eligendi nam 
+      inventore aliquid labore a dolore totam illo id odio, 
+      tenetur aspernatur dolorem autem dolorum ut.
+    </p>
+    <p class="main-content">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+      Quos, explicabo dolores iure consequuntur eligendi nam 
+      inventore aliquid labore a dolore totam illo id odio, 
+      tenetur aspernatur dolorem autem dolorum ut.
+    </p>
+    <button class="main-button">구매하기</button>
+  </div>
+  <div class="explain-box">
+    <h4>How we design out shoes.</h4> 
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+      Quos, explicabo dolores iure consequuntur eligendi nam 
+      inventore aliquid labore a dolore totam illo id odio, 
+      tenetur aspernatur dolorem autem dolorum ut.
+    </p>
+  </div>
+
+
+  <!-- 미디어 쿼리를 활용한 가로정렬 연습 -->
+  <div class="product-container">
+    <div>
+      <h4>Fast Shipping</h4>
+      <p>lorem ipsum</p>
     </div>
-    <div class="main-background">
-        <h4 class="main-title">Buy Our Shoes!</h4>
-        <p class="main-content">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus minima, error est molestiae voluptates ad quibusdam quia repellendus ducimus esse eum velit expedita accusantium obcaecati itaque doloribus consectetur facilis laborum.\n
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus illum asperiores obcaecati sunt blanditiis rem illo labore autem vitae. Molestias, eos. Officia, aliquid vel? Nesciunt quos laborum temporibus ratione debitis.
-        </p>
-        <button class="main-button">구매하기</button>
+    <div>
+      <h4>Fast Shipping</h4>
+      <p>lorem ipsum</p>
     </div>
-    <div class="explaion-box">
-        <h4>How we design out shoes.</h4>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus minima, error est molestiae voluptates ad quibusdam quia repellendus ducimus esse eum velit expedita accusantium obcaecati itaque doloribus consectetur facilis laborum.\n
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus illum asperiores obcaecati sunt blanditiis rem illo labore autem vitae. Molestias, eos. Officia, aliquid vel? Nesciunt quos laborum temporibus ratione debitis.
-        </p>
+    <div>
+      <h4>Fast Shipping</h4>
+      <p>lorem ipsum</p>
     </div>
-    <!-- 폼 작업 form action get이나 post 씀-->
-     <!-- action : 전송할 주소 -->
-     <!-- method : 전송 방법 : get,post -->
-      
-     <!-- 미디어 쿼리를 활용한 가로정렬 연습 -->
-      <div class="product-container">
-        <div>
-            <h4>Fast Shopping</h4>
-            <p>lorem ipsum</p>
-        </div>
-        <div>
-            <h4>Fast Shopping</h4>
-            <p>lorem ipsum</p>
-        </div>
-        <div>
-            <h4>Fast Shopping</h4>
-            <p>lorem ipsum</p>
-        </div>
-        <div>
-            <h4>Fast Shopping</h4>
-            <p>lorem ipsum</p>
-        </div>
-        <div style="float: none; clear: both;"></div>
-      </div>
-    <div class="from-background">
-        <div class="form-white">
-            <form action="">
-                <div class="w-100">
-                    <h3>Contact Us</h3>
-                    <p>Your Email</p>
-                    <input type="email" class="form-input"
-                    placeholder="Enter your email">
-                </div>
-                <div class="w-50">
-                    <p>First Name</p>
-                    <input type="text" class="form-input">
-                </div>
-                <div class="w-50">
-                    <p>Last Name</p>
-                    <input type="text" class="form-input">
-                </div>
-                <div style="clear: both;"></div>
-                <div class="w-100">
-                    <p>Message</p>
-                    <textarea name="" id=""
-                    class="form-input"></textarea>
-                </div>
-                <div class="w-100">
-                    <input type="checkbox" name="" id="sub">
-                    <label for="">Subscribe</label>
-                    <!-- <button class="btn yellow-button">SEND</button> -->
-                     <input type="submit">
-                </div>
-            
-            </form>
-        </div>
+    <div>
+      <h4>Fast Shipping</h4>
+      <p>lorem ipsum</p>
     </div>
+    <div style="float: none; clear: both;"></div>
+  </div>
+
+  <!-- FontAwesome 을 활용한 이미지 처리 -->
+  <div class="product-container">
+    <div>
+      <i class="fa-solid fa-cart-shopping fa-3x"></i>
+      <h4>Fast Shipping</h4>
+      <p>We Ship faster than other shops.</p>
+    </div>
+    <div>
+      <i class="fa-solid fa-earth-asia fa-3x"></i>
+      <h4>Good Service</h4>
+      <p>Expect a life long Service</p>
+    </div>
+    <div>
+      <i class="fa-solid fa-user fa-3x"></i>
+      <h4>Free Coupons</h4>
+      <p>With new welcome gifts</p>
+    </div>
+    <div>
+      <i class="fa-solid fa-shirt fa-3x"></i>
+      <h4>New Products</h4>
+      <p>See monthly new products
+    </div>
+    <div style="float: none; clear: both;"></div>
+  </div>
+
+  <div class="form-background">
+    <div class="form-white">
+      <form action="" method="">
+        <div class="w-100">
+          <h3>Contact Us</h3>
+          <p>Your Email</p>
+          <input type="email" class="form-input"
+          placeholder="Enter your email" name="email">
+        </div>
+        <div class="w-50">
+          <p>First Name</p>
+          <input type="text" class="form-input"
+          name="first-name">
+        </div>
+        <div class="w-50">
+          <p>Last Name</p>
+          <input type="text" class="form-input"
+          name="last-name">
+        </div>
+        <div style="clear: both;"></div>
+        <div class="w-100">
+          <p>Message</p>
+          <textarea name="message" id=""
+          class="form-input"></textarea>
+        </div>
+        <div class="w-100">
+          <input type="checkbox" name="sub" id="sub" class="">
+          <label for="sub">Subscribe</label>
+          <!-- <button class="btn yellow-button">SEND</button> -->
+           <input type="submit">
+        </div>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
