--- a/shoes/shoes.html
+++ b/shoes/shoes.html
@@ -87,24 +87,33 @@
     <div style="float: none; clear: both;"></div>
   </div>
 
-  <!-- 상품 이미지 진열하기 -->
+  <!-- 상품이미지 진열하기 -->
   <div class="shop-bg">
     <div class="shop-container">
-        <div class="shop-item">
-            <div>
-                <img src="img/product1.jpg"  class="aa" alt="신발">
-            </div>
+      <div class="shop-item">
+        <div style="position: relative;">
+          <div class="overlay"></div>
+          <div>
+            <img src="./img/product1.jpg" alt="신발">
+          </div>
         </div>
-        <div class="shop-item">
-            <div>
-                <img src="img/product2.jpg" alt="신발">
-            </div>
+      </div>
+      <div class="shop-item">
+        <div style="position: relative;">
+          <div class="overlay"></div>
+          <div>
+            <img src="./img/product2.jpg" alt="신발">
+          </div>
         </div>
-        <div class="shop-item">
-            <div>
-                <img src="img/product3.jpg" alt="신발">
-            </div>
+      </div>
+      <div class="shop-item">
+        <div style="position: relative;">
+          <div class="overlay"></div>
+          <div>
+            <img src="./img/product3.jpg" alt="신발">
+          </div>
         </div>
+      </div>
     </div>
   </div>
 
