--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -4,7 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/portfolio.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+            integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"/>
         <title>Document</title>
     </head>
     <body>
@@ -32,32 +37,72 @@
         </div>
         <div class="sub-container3">
             <div class="text-container3">
-            <div class="title2">spider man</div>
-            <div class="sub-title2">What We Offer</div>
+                <div class="title2">spider man</div>
+                <div class="sub-title2">What We Offer</div>
             </div>
             <div class="product-container">
                 <div>
                     <i class="fa-solid fa-mobile-screen-button fa-3x"></i>
-                  <h4>Responsive</h4>
-                  <p>dasf qewfg werg</p>
+                    <h4>Responsive</h4>
+                    <p>dasf qewfg werg</p>
                 </div>
                 <div>
                     <i class="fa-solid fa-flask fa-3x"></i>
-                  <h4>Experiments</h4>
-                  <p>Expect a life long Service</p>
+                    <h4>Experiments</h4>
+                    <p>Expect a life long Service</p>
                 </div>
                 <div>
                     <i class="fa-solid fa-bolt-lightning fa-3x"></i>
-                  <h4>Quickness</h4>
-                  <p>With new welcome gifts</p>
+                    <h4>Quickness</h4>
+                    <p>With new welcome gifts</p>
                 </div>
                 <div>
                     <i class="fa-solid fa-earth-americas fa-3x"></i>
-                  <h4>Global Shipping</h4>
-                  <p>See monthly new products
+                    <h4>Global Shipping</h4>
+                    <p>See monthly new products
+                    </div>
+                    <div style="float: none; clear: both;"></div>
                 </div>
-                <div style="float: none; clear: both;"></div>
-              </div>
-        </div>
-    </body>
-</html>
+            </div>
+            <div class="text-container4">
+                <div class="title2">spider man</div>
+                <div class="sub-title2">What we can DO</div>
+            </div>
+            <div class="img-box">
+                <div class="img-bg">
+                    <div class="image-container">
+                        <img src="img/portfolio-1.jpg" class="1" alt="1">
+                        <div class="text-overlay">standard1</div>
+                    </div>
+                </div>
+                <div class="image-container">
+                    <img src="img/portfolio-2.jpg" class="2" alt="2">
+                    <div class="text-overlay">standard2</div>
+                </div>
+                <div class="image-container">
+                    <img src="img/portfolio-3.jpg" class="3" alt="3">
+                    <div class="text-overlay">standard3</div>
+                </div>
+                <div class="image-container">
+                    <img src="img/portfolio-4.jpg" class="4" alt="4">
+                    <div class="text-overlay">standard4</div>
+                </div>
+            </div>
+                <div class="sub-container4">
+                    <div class="sns-box">
+                        <div>
+                            <i class="fa-brands fa-google fa-1x"></i>
+                        </div>
+                        <div>
+                            <i class="fa-brands fa-twitter fa-1x"></i>
+                        </div>
+                        <div>
+                            <i class="fa-brands fa-instagram fa-1x"></i>
+                        </div>
+                    </div>
+                </div>
+                <h4>
+                    @Copyright
+                </h4>
+            </body>
+        </html>
